# TIRT-Gazebo-Simple-ROS2

./: README.md  README_zh-CN.md  README_zh-TW.md
tirt_gazebo_ros2/: CMakeLists.txt  package.xml
tirt_gazebo_ros2/launch/: turtlebot3_tirt.launch.py
tirt_gazebo_ros2/worlds/turtlebot3_tirt/: burger.model  waffle.model  waffle_pi.model
