<?xml version="1.0"?>
<package format="2">
    <name>tirt_gazebo_ros2</name>
    <version>0.1.0</version>
    <description>The tirt_gazebo_ros2 package</description>
    <maintainer email="tp6u4jo6@gmail.com">Wenjiu</maintainer>
    <license>CC BY-NC-SA 4.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>
</package>
